--- a/ui/src/styles/Home.module.css
+++ b/ui/src/styles/Home.module.css
@@ -7,31 +7,6 @@
   min-height: 100vh;
 }
 
-.background {
-  pointer-events: none;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  pointer-events: none;
-  z-index: 0;
-}
-
-.background::before {
-  background: url('/assets/hash-pattern.png');
-  z-index: 1;
-  -webkit-mask-image: linear-gradient(20deg, #000 25%, transparent);
-  mask-image: linear-gradient(20deg, #000 25%, transparent);
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-}
-
 .backgroundGradients {
   display: block;
   position: absolute;
@@ -89,7 +64,7 @@
 }
 
 .card:after {
-  content: '';
+  content: "";
   position: absolute;
   inset: 0.4rem -0.4rem -0.4rem 0.4rem;
   border-radius: 4px 1px;
@@ -151,7 +126,7 @@
         rgba(45, 45, 45, 0.66),
         rgba(45, 45, 45, 0.66)
       ),
-      url('/assets/button-hover-light.png');
+      url("/assets/button-hover-light.png");
     border: 1px solid #2d2d2d;
     background-size: 100% 100%;
     transform: translateZ(-1px);
