--- a/ui/src/styles/globals.css
+++ b/ui/src/styles/globals.css
@@ -1,32 +1,36 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 @font-face {
-  font-family: 'ABC Monument Grotesk';
+  font-family: "ABC Monument Grotesk";
   font-style: normal;
   font-weight: normal;
-  src: url('/assets/fonts/ABCMonumentGrotesk-Regular.woff2') format('woff2'),
-    url('/assets/fonts/ABCMonumentGrotesk-Regular.woff') format('woff');
+  src: url("/assets/fonts/ABCMonumentGrotesk-Regular.woff2") format("woff2"),
+    url("/assets/fonts/ABCMonumentGrotesk-Regular.woff") format("woff");
 }
 
 @font-face {
-  font-family: 'ABC Monument Grotesk Light';
+  font-family: "ABC Monument Grotesk Light";
   font-style: normal;
-  src: url('/assets/fonts/ABCMonumentGrotesk-Light.woff2') format('woff2'),
-    url('/assets/fonts/ABCMonumentGrotesk-Light.woff') format('woff');
+  src: url("/assets/fonts/ABCMonumentGrotesk-Light.woff2") format("woff2"),
+    url("/assets/fonts/ABCMonumentGrotesk-Light.woff") format("woff");
 }
 
 @font-face {
-  font-family: 'ABC Monument Grotesk Bold';
+  font-family: "ABC Monument Grotesk Bold";
   font-style: normal;
   font-weight: bold;
-  src: url('/assets/fonts/ABCMonumentGrotesk-Bold.woff2') format('woff2'),
-    url('/assets/fonts/ABCMonumentGrotesk-Bold.woff') format('woff');
+  src: url("/assets/fonts/ABCMonumentGrotesk-Bold.woff2") format("woff2"),
+    url("/assets/fonts/ABCMonumentGrotesk-Bold.woff") format("woff");
 }
 
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
-  --font-monument: 'ABC Monument Grotesk', sans-serif;
-  --font-monument-bold: 'ABC Monument Grotesk Bold', sans-serif;
-  --font-monument-light: 'ABC Monument Grotesk Light', sans-serif;
+  --font-monument: "ABC Monument Grotesk", sans-serif;
+  --font-monument-bold: "ABC Monument Grotesk Bold", sans-serif;
+  --font-monument-light: "ABC Monument Grotesk Light", sans-serif;
   --foreground-rgb: 0, 0, 0;
 }
 
@@ -40,7 +44,21 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-  font-family: 'ABC Monument Grotesk';
+  /* font-family: "ABC Monument Grotesk"; */
+  font-family: var(--font-monument-light);
+}
+
+body {
+  background: url("/assets/hash-pattern.png");
+  z-index: 1;
+  -webkit-mask-image: linear-gradient(20deg, #000 25%, transparent);
+  mask-image: linear-gradient(20deg, #000 25%, transparent);
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
 
 a {
